# colorwandcastle

./: .gitignore  AUTHORS  Colorwand_Castle.nja  IDEAS  Makefile.am  NOTES  README  README.md  colorwandcastle.py  colorwandcastle.sln  colorwandcastle.vcxproj  colorwandcastle.vcxproj.filters  colorwandcastle2.py  configure.ac
data/: Makefile.am
data/images/: Makefile.am
data/levels/: Makefile.am  room-story-001.dat.BAK
data/sounds/: Makefile.am
dev/: 0295_003.xcf  0295_004.xcf  TODO  TODO.md  makayla.xcf
dev/Archive/: 0295_001.xcf  block-20x20.xcf  block.xcf  gamespace.xcf
dev/archive/: 0295_002.xcf  bricks-20x20.xcf  makayla-30x30.xcf
dev/build-tools/: build  clean  debug  refresh  run  wipe
dev/originals/: boss-spider.xcf  enemy-lizard-1.xcf  hero-makayla-hurt-01.xcf  hero-rawson-hurt-01.xcf  powerup-bomb-1.xcf  powerup-invincible-1.xcf  powerup-laser-1.xcf  powerup-template.xcf  powerup-timefreeze-1.xcf
dev/templates/: background-guidelines.xcf  map.xcf
dev/tiled/: convert.py  room-demo-001.tmx  room-level-001.tmx  room-makayla.tmx  room-rawson-10.tmx  room-rawson-2.tmx  room-rawson-3.tmx  room-rawson-4.tmx  room-rawson-5.tmx  room-rawson-6.tmx  room-rawson-7.tmx  room-rawson-8.tmx  room-rawson-9.tmx  room-rawson.tmx  room-story-001.tmx  room-story-002.tmx  room-story-003.tmx  room-story-004.tmx  room-story-005.tmx  room-story-006.tmx  room-story-007.tmx  room-story-008.tmx  room-story-009.tmx  room-story-010.tmx  room-story-011.tmx  room-story-012.tmx  room-story-013.tmx  room-story-014.tmx  room-story-015.tmx  room-story-016.tmx  room-story-017.tmx  room-story-018-boss.tmx  room-story-019.tmx  room-story-020.tmx  room-story-021.tmx  room-story-022.tmx  room-story-023.tmx  room-template.tmx  tile-bricks.tsx  tile-castle.tsx  (+3 more)
src/: Makefile.am  anim.c  anim.h  animation.c  animation.h  collision.c  collision.h  colorwandcastle.c  colorwandcastle.h  compiler.h  datafile.c  datafile.h  dgl_collision.c  dgl_collision.h  dgl_display.c  dgl_display.h  dgl_memory.c  dgl_memory.h  dgl_random.c  dgl_random.h  dgl_resources.c  dgl_resources.h  dgl_run.c  dgl_run.h  dgl_sound.c  dgl_sound.h  dgl_sprite.c  dgl_sprite.h  dgl_text.c  dgl_text.h  direction.c  direction.h  display.c  display.h  drc_collision.c  drc_collision.h  drc_display.c  drc_display.h  drc_memory.c  drc_memory.h  (+48 more)
system/: Makefile.am  colorwandcastle.desktop
system/windows/setup/: setup.vdproj
