# The "dir" suffix marks this as a directory variable.
imagesdatadir = $(pkgdatadir)/images

# The "dist" prefix will ensure that these files are
# kept in the distribution release of the package.
# The "DATA" suffix marks this as data files for
# the package.
dist_imagesdata_DATA = \
  bullet-blue-1.png \
  bullet-blue-2.png \
  bullet-green-1.png \
  bullet-green-2.png \
  bullet-orange-1.png \
  bullet-orange-2.png \
  bullet-purple-1.png \
  bullet-purple-2.png \
  bullet-red-1.png \
  bullet-red-2.png \
  bullet-yellow-1.png \
  bullet-yellow-2.png \
  hero-makayla-01.png \
  hero-makayla-02.png \
  hero-rawson-01.png \
  hero-rawson-02.png \
  icon.png \
  mask-block.png \
  mask-plasma-1.png \
  mask-plasma-2.png \
  mask-star-1.png \
  mask-star-2.png \
  star-blue-1.png \
  star-blue-2.png \
  star-green-1.png \
  star-green-2.png \
  star-orange-1.png \
  star-orange-2.png \
  star-purple-1.png \
  star-purple-2.png \
  star-red-1.png \
  star-red-2.png \
  star-yellow-1.png \
  star-yellow-2.png \
  texture-blue.png \
  texture-green.png \
  texture-orange.png \
  texture-purple.png \
  texture-red.png \
  texture-yellow.png \
  tile-bricks.png \
  tile-door.png \
  tile-gray-wall.png
