# The "dir" suffix marks this as a directory variable.
imagesdatadir = $(pkgdatadir)/images

# The "dist" prefix will ensure that these files are
# kept in the distribution release of the package.
# The "DATA" suffix marks this as data files for
# the package.
dist_imagesdata_DATA = \
  enemy-bat-1.png \
  enemy-bat-2.png \
  enemy-bat-3.png \
  hero-makayla-01.png \
  hero-makayla-02.png \
  hero-rawson-01.png \
  hero-rawson-02.png \
  icon.png \
  mask-block.png \
  mask-plasma-1.png \
  mask-plasma-2.png \
  mask-star-1.png \
  mask-star-2.png \
  texture-blue.png \
  texture-green.png \
  texture-orange.png \
  texture-purple.png \
  texture-red.png \
  texture-yellow.png \
  tile-bricks.png \
  tile-door.png \
  tile-gray-wall.png
