# Define a new directory.
#
# The "dir" suffix marks this as a directory variable.
#
# The rest of the word (the "not dir" part) becomes
# a Makefile directory variable that can be used in
# other areas.
#
# https://www.gnu.org/software/automake/manual/html_node/Uniform.html
imagesdatadir = $(pkgdatadir)/images

# The "dist" prefix will ensure that these files are
# kept in the distribution release of the package.
#
# The "DATA" suffix marks this as data files for
# the package.
#
# The word inbetween the prefix and suffix must match
# the name of a directory, declared with the suffix
# "dir".
#
# https://www.gnu.org/software/automake/manual/html_node/Data.html
dist_imagesdata_DATA = \
  effect-poof-1.png \
  effect-poof-2.png \
  effect-poof-3.png \
  effect-poof-4.png \
  enemy-bat-1.png \
  enemy-bat-2.png \
  enemy-bat-3.png \
  enemy-spider-1.png \
  enemy-spider-2.png \
  enemy-spider-3.png \
  enemy-spider-4.png \
  enemy-spider-5.png \
  hero-makayla-01.png \
  hero-makayla-02.png \
  hero-makayla-hurt-01.png \
  hero-makayla-hurt-02.png \
  hero-rawson-01.png \
  hero-rawson-02.png \
  hero-rawson-hurt-01.png \
  hero-rawson-hurt-02.png \
  icon.png \
  mask-block.png \
  mask-plasma-1.png \
  mask-plasma-2.png \
  mask-star-1.png \
  mask-star-2.png \
  texture-blue.png \
  texture-green.png \
  texture-orange.png \
  texture-purple.png \
  texture-red.png \
  texture-yellow.png \
  tile-bricks.png \
  tile-door.png \
  tile-gray-wall.png
